# mlsat-satnogs

./: .env  .gitignore  docker-compose.yml  main.py  pyproject.toml
modules/mongodb/: mongodb.py
modules/satnogs_api/: satnogs_api.py
modules/satnogs_api/dtos/: basic_decoder.py
